--- a/game/block-blast.html
+++ b/game/block-blast.html
@@ -6,12 +6,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="robots" content="index, follow">
         <title>Block Blast Unblocked: Play Now for Free on FAF Games</title>
-        <meta name="description" content="
+        <meta name="description" content=" Block Blast Unblocked is a free, browser-based puzzle game that challenges players to strategically place blocks on an 8x8 grid to clear lines and earn points."> 
         
         <meta name="keywords" content="
         <meta name="news_keywords" content="
         <meta name="author" content="FAF Games Team">
-       <link rel="canonical" href="/game/block-blast.html" />
+       <link rel="canonical" href="/game/block-blast-unblocked.html" />
         <meta name="publisher" content="FAF Games Team">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
