--- a/game/block-blast-unblocked.html
+++ b/game/block-blast-unblocked.html
@@ -369,7 +369,7 @@
           <div class="container">
 
                <div class="article-header">
-        <h1>Block Blast </h1>
+        <h1>Block Blast Unblocked </h1>
     </div>
             <div class="row justify-content-center">
               <div class="col-lg-12">
