--- a/game/block-blast-unblocked.html
+++ b/game/block-blast-unblocked.html
@@ -279,6 +279,29 @@
                 margin-bottom: 30px;
                 margin-top: 20px
             }
+              body {
+    background-color: #121212;
+    color: #fff;
+    font-family: Arial, sans-serif;
+  }
+  .section {
+    background-color: #1e1e1e;
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+  }
+  h2 {
+    color: #ffffff;
+    border-bottom: 1px solid #333;
+    padding-bottom: 5px;
+  }
+  ul {
+    list-style-type: none;
+    padding-left: 0;
+  }
+  li {
+    margin-bottom: 5px;
+  }
             
         </style>
        </head>
@@ -394,6 +417,32 @@
           <section class="fag-games-area related_games section_100">
              <div class="container">
                 <div class="row">
+                    			    <div class="container">
+<div class="section">
+  <h2>About</h2>
+  <p><strong>Block Blast Unblocked</strong> is a fun and addictive puzzle game that challenges players to strategically place blocks to complete lines and clear the board. With a relaxing yet engaging design, it’s perfect for casual play during breaks or downtime. The game runs directly in your browser—no downloads or installations needed.</p>
+</div>
+
+<div class="section">
+  <h2>Controls</h2>
+  <ul>
+    <li><strong>Mouse:</strong> Drag & Drop Blocks</li>
+    <li><strong>Touchscreen (Mobile):</strong> Tap & Place Blocks</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>Game Information</h2>
+  <ul>
+    <li><strong>Developer:</strong> CasualPlay Studio</li>
+    <li><strong>Category:</strong> Puzzle, Strategy</li>
+    <li><strong>Genre:</strong> Block Puzzle</li>
+    <li><strong>Players:</strong> 100K+ (Active)</li>
+    <li><strong>Release Date:</strong> August 2022</li>
+    <li><strong>Build:</strong> HTML5, JavaScript</li>
+  </ul>
+</div>
+                                        </div>
                    <div class="col-12">
                       <div class="site-heading">
                          <h2 class="heading_animation">Related <span>games</span></h2>
