--- a/game/block-blast-unblocked.html
+++ b/game/block-blast-unblocked.html
@@ -10,9 +10,9 @@
         
         <meta name="keywords" content="
         <meta name="news_keywords" content="
-        <meta name="author" content="FAF Games Team">
-       <link rel="canonical" href="/game/block-blast-unblocked.html" />
-        <meta name="publisher" content="FAF Games Team">
+        <meta name="author" content="FAF Games Team"/>
+        <link rel="canonical" href="/game/block-blast-unblocked.html" />
+        <meta name="publisher" content="FAF Games Team"/>
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
