--- a/game/block-blast-unblocked.html
+++ b/game/block-blast-unblocked.html
@@ -13,6 +13,8 @@
         <meta name="author" content="FAF Games Team"/>
         <link rel="canonical" href="/game/block-blast-unblocked.html" />
         <meta name="publisher" content="FAF Games Team"/>
+        <meta property="og:image" content="https://faf-games.github.io/assets/img/blockblast/block-blast.png">
+
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
