--- a/game/block-blast-unblocked.html
+++ b/game/block-blast-unblocked.html
@@ -422,8 +422,11 @@
                     			    <div class="container">
 <div class="section">
   <h2>About</h2>
-  <p><strong>Block Blast Unblocked</strong> is a fun and addictive puzzle game that challenges players to strategically place blocks to complete lines and clear the board. With a relaxing yet engaging design, it’s perfect for casual play during breaks or downtime. The game runs directly in your browser—no downloads or installations needed.</p>
+  <p><strong>Block Blast Unblocked</strong> is a fun and addictive puzzle game that challenges players to strategically place blocks to complete lines and clear the board. With a relaxing yet engaging design, it’s perfect for casual play during breaks or downtime. The game runs directly in your browser, no downloads or installations needed.</p><br>
+    Want to play more <a href="https://faf-games.github.io" target="_blank">unblocked games</a>? Whether you are at school, work, or home, just click, relax, and enjoy no restrictions on what you can play.  </p>
+
 </div>
+                                        
 
 <div class="section">
   <h2>Controls</h2>
