--- a/game/block-blast-unblocked.html
+++ b/game/block-blast-unblocked.html
@@ -419,35 +419,66 @@
           <section class="fag-games-area related_games section_100">
              <div class="container">
                 <div class="row">
-                    			    <div class="container">
-<div class="section">
-  <h2>About</h2>
-  <p><strong>Block Blast Unblocked</strong> is a fun and addictive puzzle game that challenges players to strategically place blocks to complete lines and clear the board. With a relaxing yet engaging design, it’s perfect for casual play during breaks or downtime. The game runs directly in your browser, no downloads or installations needed.</p><br>
-    Want to play more <a href="https://faf-games.github.io" target="_blank">unblocked games</a>? Whether you are at school, work, or home, just click, relax, and enjoy no restrictions on what you can play.  </p>
+                    			   <div class="dark-theme container">
+
+  <div class="dark-theme section">
+    <h2>About</h2>
+    <p><strong>Block Blast Unblocked</strong> is a relaxing yet strategic block placement game where you drag shapes onto a grid to clear full rows and columns for points. This <strong>Block Blast unblocked</strong> version runs instantly in your browser and is perfect for quick brain-training sessions at school, work, or home. Enjoy smooth drag-and-drop controls, satisfying combos, and endless replay value as you <strong>play Block Blast online for free</strong> alongside other top <a href="https://faf-games.github.io" target="_blank">unblocked games</a>.</p>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>How to Play / Tips</h2>
+    <ul>
+      <li>Drag the given block pieces onto the board to complete full rows or columns.</li>
+      <li>Leave space for larger pieces by building clears near the center of the board.</li>
+      <li>Chain multiple clears in one move to score extra points.</li>
+      <li>Think two or three moves ahead to avoid running out of placements.</li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Controls</h2>
+    <ul>
+      <li><strong>Mouse Drag:</strong> Pick up and place blocks</li>
+      <li><strong>Mouse Release:</strong> Drop block onto the grid</li>
+      <li><strong>Left Click:</strong> Select piece</li>
+      <li><strong>Touch:</strong> Tap and drag on mobile devices</li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Game Information</h2>
+    <ul>
+      <li><strong>Developer:</strong> Independent Web Port</li>
+      <li><strong>Genre:</strong> Logic / Block Placement</li>
+      <li><strong>Players:</strong> Single Player</li>
+      <li><strong>Release Date:</strong> 2022</li>
+      <li><strong>Build:</strong> HTML5</li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Game Objective</h2>
+    <p>Score as many points as possible by clearing rows and columns while managing limited board space and incoming block shapes.</p>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Unblocked Game Disclaimer</h2>
+    <p>This is an unblocked HTML5 version of Block Blast that you can play in your browser without downloads or restrictions.</p>
+  </div>
+
+  <div class="dark-theme section">
+    <h2>Related Games</h2>
+    <ul>
+      <li><a href="https://faf-games.github.io/game/2048.html">2048</a></li>
+    </ul>
+  </div>
+
+  <div class="dark-theme section tags">
+    <a href="https://faf-games.github.io/skill/index.html" class="tag">Skill</a>
+  </div>
 
 </div>
-                                        
-
-<div class="section">
-  <h2>Controls</h2>
-  <ul>
-    <li><strong>Mouse:</strong> Drag & Drop Blocks</li>
-    <li><strong>Touchscreen (Mobile):</strong> Tap & Place Blocks</li>
-  </ul>
-</div>
-
-<div class="section">
-  <h2>Game Information</h2>
-  <ul>
-    <li><strong>Developer:</strong> CasualPlay Studio</li>
-    <li><strong>Category:</strong> Puzzle, Strategy</li>
-    <li><strong>Genre:</strong> Block Puzzle</li>
-    <li><strong>Players:</strong> 100K+ (Active)</li>
-    <li><strong>Release Date:</strong> August 2022</li>
-    <li><strong>Build:</strong> HTML5, JavaScript</li>
-  </ul>
-</div>
-                                        </div>
                    <div class="col-12">
                       <div class="site-heading">
                          <h2 class="heading_animation">Related <span>games</span></h2>
