--- a/game/block-blast-unblocked.html
+++ b/game/block-blast-unblocked.html
@@ -403,7 +403,7 @@
           <div class="container">
 
                <div class="article-header">
-        <h1>Block Blast Unblocked Unblocked</h1>
+        <h1>Block Blast Unblocked</h1>
     </div>
             <div class="row justify-content-center">
               <div class="col-lg-12">
